fixing google flight datepicker & login registration page

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@
 h1 {
     font-family: 'Oswald', sans-serif;
 }
+
+body {
+    overflow: hidden;
+}
+
+#cardCarosel {
+    margin-right: -70%;
+}
+
+#dtls {}
